# Scripwriter

./: .env.example  .gitignore  README.md  VM_SETUP.md  ai.md  pyproject.toml  run_channels.bat  run_transcripts_batched.bat  run_transcripts_loop.bat  sedol_adia_mapping_report.md
CleoAbram/: tactiq-free-transcript-1WXL1IfivVo.txt  tactiq-free-transcript-DZ9v54D4mZ8.txt  tactiq-free-transcript-UtTqJ9at3Xo.txt  tactiq-free-transcript-ltyFiNsRFKg.txt  tactiq-free-transcript-rme6PT7-CRI.txt  tactiq-free-transcript-yMNmhpQ7mOs.txt
DougSharpe/: tactiq-free-transcript-7UkITDnzrZQ.txt  tactiq-free-transcript-Io1p3HR8xEQ.txt  tactiq-free-transcript-W9VVoQmvGBE.txt  tactiq-free-transcript-bB4eaGHqNQQ.txt  tactiq-free-transcript-bvw5j8RtbtY.txt  tactiq-free-transcript-bypNzQtJ8-0.txt  tactiq-free-transcript-kvQk51VZz18.txt  tactiq-free-transcript-o4XRpgyz2O8.txt  tactiq-free-transcript-o8m1-f_vn00.txt  tactiq-free-transcript-slT0C7e-uXo.txt
DropBox/: Exposing the Impossible Odds of Winning on Prediction Markets (Polymarket + Kalshi).txt  south-africa-nuclear-weapons.docx
data/Cleo Abram/: README.txt  (+5 more)
docs/: VM_SETUP.md  h1t1-style.md
h1t1/: tactiq-free-transcript-2a9oll96i38.txt  tactiq-free-transcript-EKd2Pi_3mSU.txt  tactiq-free-transcript-GWbgPM3FvZA.txt  tactiq-free-transcript-rvx124ljemI.txt  tactiq-free-transcript-vUUAOCJ6uJQ.txt
scripts/: Scripts.docx  mrbeast-insider-trading-kalshi.md
thomasmulligan/: tactiq-free-transcript-OzwxzcXejJU.txt  tactiq-free-transcript-QwguOe3PmPA.txt  tactiq-free-transcript-jMLE7DnRSpU.txt  tactiq-free-transcript-nWJA_2v3dcg.txt  (+2 more)
(+96 files in other folders)
