[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ytchan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "tenacity>=8.0",
    "yt-dlp>=2024.1.1",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
ytchan = "ytchan.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
